tests/errors/break-unknown-label.ari
fn main() -> i64 {
  while true {
    break missing;
  }
  return 0;
}
